--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body {
+  margin: 0;
+}
+
 .container {
   display: grid;
   height: 300vh;
@@ -11,13 +15,30 @@
   "resume resume resume"
   "contact contact contact";
   grid-gap: 0.2rem;
-  margin: 0;
+
 }
 
 nav{
+  display: flex;
+  justify-content: flex-end;
   background: #003638;
   color: #fff;
   grid-area: nav;
+}
+
+ul {
+  list-style-type: none;
+  margin-right: 50px;
+}
+
+li {
+  display: inline;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+a {
+  color: #fff;
 }
 
 #intro {
