--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
   display: grid;
   height: 300vh;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 0.2fr 2.5fr 1.5fr 2fr 1fr 1fr;
+  grid-template-rows: 0.2fr 2.6fr 1.5fr 2fr 1fr 1fr;
   grid-template-areas:
   "nav nav nav"
   "intro intro intro"
@@ -15,13 +15,22 @@ body {
   "resume resume resume"
   "contact contact contact";
   grid-gap: 0.2rem;
+  grid-row-gap: 0;
 
+}
+
+h1 {
+  color: #fff;
+  font-family: 'Ubuntu';
+  font-size: 9rem;
+  margin-left: 5%;
 }
 
 nav{
   display: flex;
+  font-family: 'Merriweather';
   justify-content: flex-end;
-  background: #003638;
+  background: #53B8BB;
   color: #fff;
   grid-area: nav;
 }
@@ -33,22 +42,27 @@ ul {
 
 li {
   display: inline;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
 a {
   color: #fff;
+  text-decoration: none;
+}
+
+span {
+  color: #141E61;
 }
 
 #intro {
-background: #F3F2C9;
+background: #53B8BB;
 grid-area: intro;
 
 }
 
 #about {
-  background: #055052;
+  background: #FDF6F0;
   grid-area: about;
 
 }
@@ -60,7 +74,7 @@ grid-area: projects;
 }
 
 #resume {
-background: #055052;
+background: #FDF6F0;
 grid-area: resume;
 
 }
