--- a/styles.css
+++ b/styles.css
@@ -145,17 +145,23 @@ grid-area: contact;
 }
 
 .button {
-  background-color: red;
+  background-color: #D54C4C;
   border-radius: 5px;
   display: inline-block;
-  height: 30px;
-  width: 50px;
+  height: 35px;
+  width: 70px;
+  line-height: 2.5;
   position: relative;
   margin-left: 20px;
   margin-right: 20px;
   margin-top: 50px;
 }
 
+.button:hover {
+  background-color: red;
+}
+
 .btn {
-  color: #000;
+  color: #fff;
+  display: block;
 }
