--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,11 @@ body {
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 0.2fr 2.6fr 2fr 3.2fr 1.5fr;
   grid-template-areas:
-  "nav nav nav"
-  "intro intro intro"
-  "about about about"
-  "projects projects projects"
-  "contact contact contact";
+    "nav nav nav"
+    "intro intro intro"
+    "about about about"
+    "projects projects projects"
+    "contact contact contact";
   grid-gap: 0.2rem;
   grid-row-gap: 0;
   overflow-x: hidden;
@@ -31,7 +31,7 @@ h2 {
   margin-top: 3%;
 }
 
-nav{
+nav {
   display: flex;
   font-family: 'Merriweather';
   justify-content: flex-end;
@@ -67,7 +67,6 @@ p {
 
 .container {
   background-color: #53B8BB;
-
 }
 
 .profile {
@@ -77,9 +76,8 @@ p {
 }
 
 #intro {
-background: #53B8BB;
-grid-area: intro;
-
+  background: #53B8BB;
+  grid-area: intro;
 }
 
 #about {
@@ -89,9 +87,9 @@ grid-area: intro;
 }
 
 #projects {
-background: #055052;
-grid-area: projects;
-text-align: center;
+  background: #055052;
+  grid-area: projects;
+  text-align: center;
 }
 
 #projects h2 {
@@ -99,16 +97,14 @@ text-align: center;
 }
 
 #resume {
-background: #FDF6F0;
-grid-area: resume;
-
+  background: #FDF6F0;
+  grid-area: resume;
 }
 
 #contact {
-background: #FDF6F0;
-grid-area: contact;
-text-align: center;
-
+  background: #FDF6F0;
+  grid-area: contact;
+  text-align: center;
 }
 
 /* Navbar */
@@ -159,43 +155,34 @@ text-align: center;
   margin-top: 20px;
 }
 
-.card1 {
+.card {
   background: #fff;
   border-radius: 5px;
   font-size: 0.8rem;
   height: 450px;
   width: 350px;
   position: absolute;
+}
+
+.card1 {
   margin-left: 8%;
   margin-top: 5%;
 }
 
 .card2 {
-  background: #fff;
-  border-radius: 5px;
-  font-size: 0.8rem;
-  height: 450px;
-  width: 350px;
-  position: absolute;
   margin-left: 38%;
   margin-top: 5%;
 }
 
 .card3 {
-  background: #fff;
-  border-radius: 5px;
-  font-size: 0.8rem;
-  height: 450px;
-  width: 350px;
-  position: absolute;
   margin-left: 68%;
   margin-top: 5%;
 }
 
 .project-pic {
   border-radius: 5px 5px 0 0;
-  height: 45%;
-  width: 100%;
+  height: 173px;
+  width: 350px;
 }
 
 .button {
@@ -235,7 +222,6 @@ text-align: center;
 .socials {
   display: inline-block;
   position: relative;
-  margin-right:
 }
 
 .socials-icon {
@@ -244,7 +230,7 @@ text-align: center;
   margin: 10px 15px 0 15px;
 }
 
-@media only screen and (max-width: 576px) {
+@media screen and (max-width: 767px) {
   h1 {
     font-size: 3.8rem;
     margin-left: 10%;
@@ -266,29 +252,30 @@ text-align: center;
     margin-right: 15%;
   }
 
-   h2 {
+  h2 {
     padding-top: 10%;
   }
 
+  .project-pic {
+    height: 158px;
+    width: 320px;
+  }
+
+  .card {
+    width: 320px;
+  }
+
   .card1 {
-    font-size: 0.8rem;
     margin-left: 8%;
     margin-top: 10%;
-    width: 320px;
   }
 
   .card2 {
-    font-size: 0.8rem;
     margin-left: 8%;
     top: 59%;
-    width: 320px;
   }
 
   .card3 {
-    font-size: 0.8rem;
     margin-left: 8%;
     top: 73%;
-    width: 320px;
   }
-
-}
