--- a/styles.css
+++ b/styles.css
@@ -107,6 +107,23 @@ p {
   text-align: center;
 }
 
+/* Back to top button */
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 10px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: #5C527F;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 10px;
+  font-size: 18px;
+}
+
 /* Navbar */
 .overlay {
   height: 100%;
@@ -254,6 +271,12 @@ p {
   #about p {
     margin-left: 15%;
     margin-right: 22%;
+  }
+
+  #myBtn {
+    height: 45px;
+    width: 90px;
+    font-size: 0.7rem;
   }
 
   h2 {
